Test with github link

--- a/site.yml
+++ b/site.yml
@@ -10,6 +10,6 @@ author :
 navigation :
 #  - archive.md
   - publications.md
+  - [GitHub](https://github.com/pjpmarques/)
   - language.md
   - about.md
-
