Created blog page

--- a/site.yml
+++ b/site.yml
@@ -10,6 +10,6 @@ author :
 navigation :
 #  - archive.md
   - publications.md
-  - <a href="https://github.com/pjpmarques/">GitHub</a>
   - language.md
+  - blog.md
   - about.md
